--- a/WordPressStores/build.gradle
+++ b/WordPressStores/build.gradle
@@ -53,8 +53,8 @@ dependencies {
 
     // External libs
     compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.dagger:dagger:2.0.2'
