--- a/WordPressStores/build.gradle
+++ b/WordPressStores/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
       classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-      classpath 'com.android.tools.build:gradle:2.0.0-beta7'
+      classpath 'com.android.tools.build:gradle:2.1.2'
       classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
