--- a/instaflux/src/main/AndroidManifest.xml
+++ b/instaflux/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity
             android:name="org.wordpress.android.fluxc.instaflux.MainInstafluxActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Instaflux">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,7 +19,8 @@
         </activity>
         <activity
             android:name="org.wordpress.android.fluxc.instaflux.PostActivity"
-            android:label="@string/post"/>
+            android:label="@string/post"
+            android:theme="@style/Instaflux"/>
     </application>
 
 </manifest>
