--- a/fluxc/build.gradle
+++ b/fluxc/build.gradle
@@ -3,15 +3,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-      classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-      classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.0-beta1'
       classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'com.github.dcendents.android-maven'
 
 repositories {
     jcenter()
