--- a/build.gradle
+++ b/build.gradle
@@ -3,5 +3,6 @@ buildscript {
        jcenter()
    }
    dependencies {
+       classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
    }
 }
