--- a/fluxc/build.gradle
+++ b/fluxc/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-beta1'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
@@ -68,6 +68,5 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
 }
 
-version android.defaultConfig.versionName
+version = android.defaultConfig.versionName
 group = "org.wordpress"
-archivesBaseName = "fluxc"
