--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - platform-tools
     - tools
     - build-tools-23.0.2
-    - android-23
+    - android-24
 
 env:
   global:
@@ -16,6 +16,11 @@ env:
     - ANDROID_SDKS=android-14
     - ANDROID_TARGET=android-14
 
+before_install:
+  # TODO: Remove the following line when Travis' platform-tools are updated to v24+
+  - echo yes | android update sdk -a --filter platform-tools --no-ui --force
+
 script:
-  - ./gradlew build
+  - ./gradlew assembleDebug assembleRelease
+  - ./gradlew lint || (grep -A20 -B2 'severity="Error"' */build/outputs/*.xml; exit 1)
   - ./gradlew checkstyle
