--- a/example/build.gradle
+++ b/example/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         applicationId "org.wordpress.android.fluxc.example"
