--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ android:
 
 env:
   global:
+    - MALLOC_ARENA_MAX=2
     - GRADLE_OPTS="-Xmx768m -Xms256m -Xss1m"
     - ANDROID_SDKS=android-14
     - ANDROID_TARGET=android-14
